--- a/package.json
+++ b/package.json
@@ -4,22 +4,38 @@
   "description": "use node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "keywords": [
     "node",
     "spider",
     "zhengfang"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/username/repository.git"
+  },
   "author": "vicient",
   "license": "MIT",
   "dependencies": {
     "async": "^2.1.4",
+    "body-parser": "~1.15.2",
     "bufferhelper": "^0.2.1",
+    "connect-redis": "^3.2.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "ejs": "~2.5.2",
+    "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "iconv": "^2.2.1",
     "iconv-lite": "^0.4.15",
+    "less-middleware": "~2.2.0",
+    "morgan": "~1.7.0",
     "mysql": "^2.12.0",
     "promise": "^7.1.1",
-    "superagent": "^3.3.1"
+    "redis": "^2.6.3",
+    "serve-favicon": "~2.3.0",
+    "superagent": "^3.3.1",
+    "superagent-retry": "^0.6.0"
   }
 }
