--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "promise": "^7.1.1",
     "redis": "^2.6.3",
     "serve-favicon": "~2.3.0",
+    "socket.io": "^1.7.2",
     "superagent": "^3.3.1",
     "superagent-retry": "^0.6.0"
   }
